--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "bootstrap": "^4.4.1",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "reactstrap": "^8.4.1",
     "styled-components": "^5.0.1"
   }
