--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "if-env": "^1.0.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-pdf": "^4.1.0",
     "react-router-dom": "^5.1.2",
     "reactstrap": "^8.4.1",
     "styled-components": "^5.0.1"
