--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "bootswatch": "^4.4.1",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "react": "^16.12.0",
