--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Mern Demo",
   "main": "server.js",
+  "homepage": "https://eric-gustafson1.github.io/react-portfolio/",
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "start:prod": "node server.js",
@@ -11,7 +12,9 @@
     "seed": "node scripts/seedDB.js",
     "install": "cd client && npm install",
     "build": "cd client && npm run build",
-    "heroku-postbuild": "npm run build"
+    "heroku-postbuild": "npm run build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "author": "",
   "license": "ISC",
@@ -28,6 +31,7 @@
     "bootstrap": "^4.4.1",
     "bootswatch": "^4.4.1",
     "express": "^4.16.3",
+    "gh-pages": "^2.2.0",
     "if-env": "^1.0.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
