--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-fontawesome": "^1.7.1",
     "react-pdf": "^4.1.0",
     "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.4.0",
     "reactstrap": "^8.4.1",
     "styled-components": "^5.0.1"
   }
