--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "homepage": "https://eric-gustafson1.github.io/react-portfolio/",
   "scripts": {
     "start": "react-scripts start",
-    "start:prod": "node server.js",
+    "start:prod": "react-scrips start",
     "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
     "client": "cd client && npm run start",
     "seed": "node scripts/seedDB.js",
