--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-portfolio",
   "version": "1.0.0",
-  "homepage": "https://eric-gustafson1.github.io/react-portfolio/",
+  "homepage": "https://eric-gustafson1.github.io/",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
